5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1646_87.log
== TEST (2019-04-13 12:01:51) 
-- CODE:
p=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
t=int(input("Insira o terceiro numero:"))

print(min(a,b,c))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(min(a,b,c))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 12:02:18) 
-- CODE:
p=int(input("Insira o primeiro numero:"))
s=int(input("Insira o segundo numero:"))
t=int(input("Insira o terceiro numero:"))

print(min(p,s,t))
-- EXECUTION TIME:
0.13603
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
